@@ -1,3 +1,9 @@
+2007-12-01  Kostik Belousov  <kostikbel@ukr.net>
+
+	PR ada/33722
+	* env.c (__gnat_setenv): FreeBSD 7 has a POSIX conformant putenv()
+	and its argument must not be free()ed.
+
 2007-11-29  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* decl.c (make_packable_type): Retrieve the real name of the type.
